language/move-lang/tests/move_check/parser/struct_without_fields.move
module M {
    // Non-native structs must specify the list of fields.
    struct S;
}
